<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2018 Google Inc.
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
    http://www.apache.org/licenses/LICENSE-2.0
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License. -->

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="myName"
            type="com.example.android.aboutme.MyName" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding"
        android:paddingEnd="@dimen/padding">

        <TextView
            android:id="@+id/hello_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/hello"
            android:textAlignment="center"
            android:textSize="30sp" />

        <ScrollView
            android:layout_width="381dp"
            android:layout_height="615dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/name_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_name"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/nickname_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nickname"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/nickname_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_nickname"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/age_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/age"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/age_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_age"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/birthday_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/birthday"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/birthday_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_birthday"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/number_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/number"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/number_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_number"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/color_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/color"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/color_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_color"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/course_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/course"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/course_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_course"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/dream_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dream"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/dream_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_dream"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/crush_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/crush"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/crush_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_crush"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/message_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/message"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/message_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <Button
                    android:id="@+id/done_button"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto"
                    android:text="@string/done"
                    android:textAlignment="gravity" />

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={myName.name}"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/user_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={myName.nickname}"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/user_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={myName.age}"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/thanks_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/thank_you"
                    android:textAlignment="center"
                    android:visibility="gone" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>
